--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
-
-/* Your CSS Code here. */
+.holder{
+	width:100vw;
+	height:100vw;
+	display:flex;
+	flex-direction:row;
+	justify-content:center;
+	align-items:center;
+}
+.item-1{
+	width:100px;
+	height:100px;
+	background-color:red;
+}
